# Tim

./: .commitlintrc.js  .gitignore  .releaserc.js  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: CODEOWNERS.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml
.github/workflows/: commitlint.yml  docs.yml  format.yml  lint.yml  release.yml  test.yml
lib/hkt/: Cargo.toml
lib/hkt/src/: lib.rs
lib/hkt_macro/: Cargo.toml
lib/hkt_macro/src/: lib.rs
lib/pipe_macro/: Cargo.toml
lib/prelude/: Cargo.toml  README.md
lib/prelude/src/: lib.rs
lib/prelude/src/algebra/: group.rs  id.rs  magma.rs  mod.rs  monoid.rs  semigroup.rs
lib/prelude/src/category/: applicative.rs  apply.rs  functor.rs  mod.rs
lib/timrs_hkt_macro/: Cargo.toml  README.md
lib/timrs_hkt_macro/src/: lib.rs
lib/timrs_macro_utils/: Cargo.toml  README.md
lib/timrs_pipe_macro/: Cargo.toml  README.md
lib/timrs_pipe_macro/src/: lib.rs
private/timrs_macro_utils/: Cargo.toml  README.md
private/timrs_macro_utils/src/: error.rs  lib.rs  parse.rs  test.rs
