[workspace]
members=["lib/timrs_hkt_macro", "lib/timrs_pipe_macro", "private/timrs_macro_utils"]
resolver="2"

[workspace.dependencies]
timrs_hkt_macro={path="lib/timrs_hkt_macro"}
timrs_pipe_macro={path="lib/timrs_pipe_macro"}
timrs_macro_utils={path="private/timrs_macro_utils"}

[workspace.lints.clippy]
all={level="deny", priority=-2}
cargo={level="warn", priority=-1}
complexity={level="warn", priority=-1}
correctness={level="warn", priority=-1}
nursery={level="warn", priority=-1}
pedantic={level="warn", priority=-1}
perf={level="warn", priority=-1}
restriction={level="warn", priority=-1}
style={level="warn", priority=-1}
suspicious={level="warn", priority=-1}

absolute_paths="allow"
blanket_clippy_restriction_lints="allow"
implicit_return="allow"
min_ident_chars="allow"
missing_docs_in_private_items="allow"
missing_trait_methods="allow"
mod_module_files="allow"
module_name_repetitions="allow"
must_use_candidate="allow"
question_mark_used="allow"
ref_patterns="allow"
self_named_module_files="allow"
separated_literal_suffix="allow"
single_call_fn="allow"

needless_return="deny"
