[package]
categories = ["functional", "higher-kinded types", "procedural macro"]
description = "Rust Higher-Kinded Types emulation procedural macros."
edition = "2021"
keywords = ["functional", "higher-kinded types", "procedural macro"]
license = "MIT"
name = "hkt_macro"
readme = "README.md"
repository = "https://github.com/DiCaius/Tim.rs"
version = "0.1.0"

[dependencies]
hkt = { workspace = true }
quote = { version = "1.0.36" }
syn = { version = "2.0.63", features = ["full"] }

[lib]
proc-macro = true

[lints]
workspace = true
