[package]
categories = ["composition", "pipe", "procedural macro"]
description = "Rust function composition procedural macro."
edition = "2021"
keywords = ["composition", "pipe", "procedural macro"]
license = "MIT"
name = "pipe_macro"
readme = "README.md"
repository = "https://github.com/DiCaius/Tim.rs"
version = "0.1.0"

[dependencies]
quote = { version = "1.0.36" }
syn = { version = "2.0.63", features = ["full"] }

[lib]
proc-macro = true

[lints]
workspace = true
