[package]
categories = ["functional", "prelude"]
description = "Rust functional utilities."
edition = "2021"
keywords = ["functional", "prelude"]
license = "MIT"
name = "prelude"
readme = "README.md"
repository = "https://github.com/DiCaius/Tim.rs"
version = "0.1.0"

[dependencies]
hkt = { workspace = true }
hkt_macro = { workspace = true }

[lints]
workspace = true
