[package]
categories = ["functional", "higher-kinded types", "procedural macro"]
description = "Rust Higher-Kinded Types emulation procedural macros."
edition = "2021"
keywords = ["functional", "higher-kinded types", "procedural macro"]
license = "MIT"
name = "timrs_hkt_macro"
readme = "README.md"
repository = "https://github.com/DiCaius/Tim.rs"
version = "0.1.0"

[dependencies]
prettyplease = {version = "0.2.20"}
proc-macro2 = {version = "1.0.83"}
quote = {version = "1.0.36"}
syn = {version = "2.0.63", features = ["full"]}

[lib]
proc-macro = true

[lints]
workspace = true
