[package]
categories=["functional", "higher-kinded types", "procedural macro"]
description="Rust Higher-Kinded Types emulation procedural macros."
edition="2021"
keywords=["functional", "hkt", "procedural-macro"]
license="MIT"
name="timrs_hkt_macro"
publish=true
readme="README.md"
repository="https://github.com/DiCaius/Tim.rs"
version ="1.1.0-rc.1"

[dependencies]
proc-macro2={version="1.0.83"}
quote={version="1.0.36"}
syn={version="2.0.63", features=["full"]}

[dev-dependencies]
timrs_macro_utils={workspace=true}

[lib]
proc-macro=true

[lints]
workspace=true
