[package]
categories=["functional", "higher-kinded types", "procedural macro"]
description="Rust Higher-Kinded Types emulation procedural macros."
edition="2021"
keywords=["functional", "pipe", "procedural-macro"]
license="MIT"
name="timrs_pipe_macro"
publish=true
readme="README.md"
repository="https://github.com/DiCaius/Tim.rs"
version="1.1.0-rc.2"

[dependencies]
proc-macro2={version="1.0.83"}
quote={version="1.0.36"}
syn={version="2.0.63", features=["full"]}
timrs_macro_utils={workspace=true,version ="1.1.0-rc.2"}

[lib]
proc-macro=true

[lints]
workspace=true

