[package]
categories=[]
description="Macro helpers for Tim.rs."
edition="2021"
keywords=[]
license="MIT"
name="timrs_macro_utils"
publish=false
readme="README.md"
repository="https://github.com/DiCaius/Tim.rs"
version="1.1.0-rc.2"

[dependencies]
proc-macro2={version="1.0.83"}
quote={version="1.0.36"}
syn={version="2.0.63", features=["full"]}
prettyplease={version="0.2.20"}

[lints]
workspace=true
